# django-codemod

./: .all-contributorsrc  .gitpod.yml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pyup.yml  .readthedocs.yml  .sourcery.yaml  .travis.yml  AUTHORS.rst  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  commitlint.config.js  conftest.py  mypy.ini  pyproject.toml  renovate.json  requirements-dev.txt  requirements.in  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: CODE_OF_CONDUCT.md  FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  labels.toml  release-drafter.yml
.github/ISSUE_TEMPLATE/: 1-bug_report.md  2-new-codemodder.md  3-feature-request--other-than-codemodder-.md  bug_report.md  feature-request--other-than-codemodder-.md  new-codemodder.md
.github/workflows/: bumpversion.yml  changelog-generator.yml  ci.yml  codeql.yml  commitlint.yml  draft-release.yml  hacktoberfest.yml  issue-manager.yml  labels.yml  lint.yml  poetry-upgrade.yml  pre-commit-autoupdate.yml  publish-pypi.yml  release.yml  semantic-release.yml  test.yml  upgrader.yml
django_codemod/: __init__.py  cli.py  commands.py  constants.py  path_utils.py  re.py
django_codemod/codemods/: __init__.py  constants.py  django_40.py
django_codemod/commands/: base.py  django_30.py  django_31.py  django_32.py  django_40.py  django_codemod.py
django_codemod/utils/: calls.py
django_codemod/visitors/: __init__.py  admin.py  base.py  core.py  crypto.py  decorators.py  django_30.py  django_40.py  encoding.py  exceptions.py  forms.py  html.py  http.py  lru_cache.py  models.py  os_utils.py  postgres_fields.py  shortcuts.py  signals.py  template_tags.py  timezone.py  translations.py  urls.py
docs/: Makefile  changelog.md  codemods.md  codemods.rst  conf.py  index.md  index.rst  installation.md  installation.rst  make.bat  pre-commit-hook.md  requirements.in  requirements.txt  usage.md  usage.rst
src/django_codemod/: cli.py  commands.py  constants.py  feature_flags.py  path_utils.py
src/django_codemod/utils/: calls.py
src/django_codemod/visitors/: __init__.py  admin.py  base.py  crypto.py  encoding.py  exceptions.py  forms.py  html.py  models.py  os_utils.py  paginator.py  postgres_fields.py  shortcuts.py  signals.py  template_context.py  template_tags.py  timezone.py  translations.py  urls.py
templates/: .changelog-old.md  CHANGELOG.md.j2
tests/: __init__.py  test_cli.py  test_commands.py  test_django_codemod.py  test_e2e.sh  test_path_utils.py
tests/codemods/: test_constants.py  test_django_40.py
tests/commands/: test_django_30.py  test_django_40.py
tests/visitors/: base.py  test_admin.py  test_base.py  test_core.py  test_crypto.py  test_decorators.py  test_django_30.py  test_django_40.py  test_encoding.py  test_exceptions.py  test_forms.py  test_html.py  test_http.py  test_lru_cache.py  test_models.py  test_os_utils.py  test_paginator.py  test_postgres_fields.py  test_shortcuts.py  test_signals.py  test_template_context.py  test_template_tags.py  test_timezone.py  test_translations.py  test_urls.py
