[bumpversion]
current_version = 0.3.0
commit = True
tag = True

[metadata]
name = django-codemod
version = attr: django_codemod.__version__
author = Bruno Alla
author_email = alla.brunoo@gmail.com
description = Collections of libCST codemodders to upgrade Django
license = MIT license
license_file = LICENSE
long_description = file:README.md
long_description_content_type = text/markdown
keywords = django, codemod, libCST
url = https://django-codemod.readthedocs.io
project_urls = 
	Source = https://github.com/browniebroke/django-codemod
	Documentation = https://django-codemod.readthedocs.io
	Travis CI = https://travis-ci.com/browniebroke/django-codemod
classifiers = 
	Development Status :: 2 - Pre-Alpha
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Natural Language :: English
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8

[options]
python_requires = >=3.6
packages = find:
include_package_data = true
zip_safe = false
install_requires = 
	libcst
test_require = 
	pytest>=3

[options.packages.find]
include = 
	django_codemod
	django_codemod.*

[bumpversion:file:django_codemod/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bdist_wheel]
universal = 1

[flake8]
exclude = docs
max-line-length = 88

[aliases]
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']
